# data-pipeline

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
artifacts/: README.md
configs/: datasets.example.yaml  datasets.yaml  join_keys.yaml  llm.yaml  ministries.yaml  ministry_lookup.yaml
data/: README.md
docs/: architecture.md
notebooks/: README.md
notebooks/01_exploration/: README.md
notebooks/02_join_qa/: README.md
notebooks/03_dashboard_prototypes/: README.md
scripts/: README.md  discover_ministry_code.py  test_api.ps1
src/fiscal_analytics/: __init__.py
src/fiscal_analytics/features/: __init__.py
src/fiscal_analytics/ranking/: __init__.py
src/fiscal_analytics/reporting/: __init__.py
src/fiscal_analytics/validation/: __init__.py
src/fiscal_dashboard/: __init__.py
src/fiscal_dashboard/app/: __init__.py
src/fiscal_dashboard/charts/: __init__.py
src/fiscal_dashboard/data_contracts/: __init__.py
src/master_engineering/: __init__.py  cli.py
src/master_engineering/build_masters/: __init__.py
src/open_fiscal_pipeline/: __init__.py  cli.py  client.py  config.py  monthly.py  normalize_monthly.py  response.py
src/performance_pipeline/: __init__.py  cli.py
tests/: test_architecture.py  test_client.py  test_config.py  test_monthly.py  test_normalize_monthly.py  test_response.py
tests/fiscal_analytics/: README.md
tests/fixtures/: openfiscal_list_root.json  openfiscal_success.json
tests/master_engineering/: README.md
tests/open_fiscal_pipeline/: README.md
tests/performance_pipeline/: README.md  test_inventory.py
(+9 files in other folders)
